<?xml version="1.0" encoding="utf-8"?>
<!--
    Portrait layout file for WorkoutDetailsActivity
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jeff.workouttracker.WorkoutDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_title_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workout_title"
        android:hint="@string/workout_title_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_details_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workout_description"
        android:hint="@string/workout_details_hint"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/effort_check_box"
        android:text="@string/effort_checkbox_label"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_button_label"/>
            <Button
                android:id="@+id/date_chooser_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_button_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_button_label"/>
            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/photo_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_save"
        android:layout_margin="16dp"/>
</LinearLayout>